--- a/assets/style.css
+++ b/assets/style.css
@@ -186,7 +186,7 @@ body {
   border-bottom: 1.5px solid #C4C4C4;
 }
 .input_box input:focus {
-  border-color:#BF2C53;
+  border-color:#593E2E;
 }
 .input_box i {
   position: absolute;
