--- a/assets/style.css
+++ b/assets/style.css
@@ -193,7 +193,7 @@ body {
   top: 50%;
   transform: translateY(-50%);
   font-size: 32px;
-  color: #593E2E;
+  color: #8C6F56;
 }
 .input_box i.email,
 .input_box i.password {
@@ -201,7 +201,7 @@ body {
 }
 .input_box input:focus ~ i.email,
 .input_box input:focus ~ i.password {
-  color: #591426;
+  color: #8C6F56;
 }
 .input_box i.pw_hide {
   right: 0;
@@ -421,7 +421,7 @@ footer {
 }
 
 .footer-list .footer-link:hover {
-  color: #BF2C53;
+  color: #8C6F56;
 }
 
 #footer_subscribe {
