--- a/assets/style.css
+++ b/assets/style.css
@@ -236,7 +236,7 @@ body {
   color: #000000;
 }
 .form_container .button {
-  background: #8C6F56;
+  background: #593E2E;
   margin-top: 30px;
   width: 100%;
   padding: 10px 0;
