--- a/assets/style.css
+++ b/assets/style.css
@@ -193,7 +193,7 @@ body {
   top: 50%;
   transform: translateY(-50%);
   font-size: 32px;
-  color: #8C6F56;
+  color: #F5F5F5;
 }
 .input_box i.email,
 .input_box i.password {
