--- a/assets/style.css
+++ b/assets/style.css
@@ -215,7 +215,7 @@ body {
   justify-content: space-between;
 }
 .form_container a {
-  color: #8C6F56;
+  color: #000000;
   font-size: 12px;
 }
 .form_container a:hover {
