--- a/assets/style.css
+++ b/assets/style.css
@@ -201,7 +201,7 @@ body {
 }
 .input_box input:focus ~ i.email,
 .input_box input:focus ~ i.password {
-  color: #000000;
+  color: #8C6F56;
 }
 .input_box i.pw_hide {
   right: 0;
