--- a/assets/style.css
+++ b/assets/style.css
@@ -227,7 +227,7 @@ body {
   white-space: nowrap;
 }
 .checkbox input {
-  accent-color: #593E2E;
+  accent-color: #8C6F56;
 }
 .checkbox label {
   font-size: 12px;
