--- a/assets/style.css
+++ b/assets/style.css
@@ -301,6 +301,10 @@ body {
 }
 
 /*MAIN*/
+main{
+  align-items: center;
+}
+
 .card_container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -315,15 +319,15 @@ body {
 
 /*CARD*/
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border: 1px solid #c4c4c4;
-  padding: 10px;
+  padding: 30px;
   text-align: center;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10x 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 750px) {
@@ -360,19 +364,19 @@ body {
   transform: translateY(-50%) scale(0.85);
 }
 .wrapper i:first-child{
-  left: -22px;
+  left: -17px;
 }
 .wrapper i:last-child{
-  right: -22px;
+  right: -24px;
 }
 .wrapper .carousel{
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: calc((100% / 3) - 12px);
+  grid-auto-columns: calc((100% / 4) - 12px);
   overflow-x: auto;
   scroll-snap-type: x mandatory;
   gap: 16px;
-  border-radius: 5px;
+  border-radius: 10px;
   scroll-behavior: smooth;
   scrollbar-width: none;
 }
@@ -397,7 +401,7 @@ body {
 }
 .carousel .card {
   scroll-snap-align: start;
-  height: 342px;
+  height: 400px;
   list-style: none;
   background: #fff;
   cursor: pointer;
